2007-01-10  Jan Arne Petersen  <jpetersen@jpetersen.org>

	Fixes #395083

	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): added
	missing NULL-check.

2007-01-08  Jan Arne Petersen  <jpetersen@jpetersen.org>

	Fixes #173035

	* actions/Makefile.am:
	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_finalize), (acme_volume_gstreamer_set_mute),
	(update_state), (acme_volume_gstreamer_get_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume),
	(acme_volume_gstreamer_close_real), (_acme_set_mixer),
	(acme_volume_gstreamer_open), (acme_volume_gstreamer_init): added
	support for multiple mixer tracks. Added support for gconf device and
	track selection.

2007-01-08  Jan Arne Petersen <jap@gnome.org>

	* ./: updated svn:ignore property.

2007-01-08  Jan Arne Petersen <jap@gnome.org>

	* gnome-settings-dbus.h, gnome-settings-marshal.list: added new files
	from previous patch to svn.

2007-01-08  Jan Arne Petersen <jap@gnome.org>

	Fixes #133815

	* gnome-settings-multimedia-keys.c: added support for storing the DBus
	server.
	(unhookup_keysim, hookup_keysim): removed.
	(update_kbd_cb, init_kbd, acme_filter_events): iterate over all handled
	keys, not just until the PLAY_KEY.
	(do_multimedia_player_action): emit the "media_player_key_pressed" event.
	(do_action): call do_multimedia_player_action for all media player events.
	(gnome_settings_multimedia_keys_load): start a DBus server.

	* gnome-settings-dbus.c: added "media_player_key_pressed" signal.
	(find_by_application, find_by_time): new functions to search in the list
	of media players.
	(settings_daemon_grab_media_player_keys,
	settings_daemon_release_media_player_keys): new functions to grab/release
	the media players.
	(gnome_settings_server_get): new function to create GnomeSettingsServer
	objects.
	(gnome_settings_server_media_player_key_pressed,
	gnome_settings_server_constructor): new functions.