@@ -1,3 +1,10 @@
+2007-01-14  Thomas Wood  <thos@gnome.org>
+
+	Patch by: Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-settings-accessibility-keyboard.c: Remove has_filter variable
+	that was never initialised. Fixes bug 382502.
+
 2007-01-10  Jan Arne Petersen  <jpetersen@jpetersen.org>
 
 	Fixes #395083
